--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Ravana Failed Despite His Greatness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>I Turned Pizza Dough Into a Fougasse! ‼️🍕#pizza #bread #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How difficulty awakens your consciousness</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1080,7 +1080,7 @@
                     <div class="video-info">
                         <h3>This country has abandoned poor people</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1898,7 +1898,7 @@
                     <div class="video-info">
                         <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1909,7 +1909,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>This Stream ends when I doubled (or lost) my Account (10,000 Euro)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5952,7 +5952,7 @@
                         <div class="video-info">
                             <h3>This country has abandoned poor people</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6275,7 +6275,7 @@
                         <div class="video-info">
                             <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Ravana Failed Despite His Greatness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>How difficulty awakens your consciousness</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>I Turned Pizza Dough Into a Fougasse! ‼️🍕#pizza #bread #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10870,7 +10870,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
