--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Can you just flip a coin and make money trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The only thing you can truly know for sure</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -2283,7 +2283,7 @@
                     <div class="video-info">
                         <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Can you just flip a coin and make money trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>The only thing you can truly know for sure</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9538,7 +9538,7 @@
                         <div class="video-info">
                             <h3>Let spinning some pizzas dough #pizza #pizza #pizzastreetfood #food #streetfood</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - What a strange lil life eh #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
